@@ -1,5 +1,7 @@
 package com.example.demo.controllers;
 
+import com.example.demo.model.Customer;
+import com.example.demo.model.Rental;
 import com.example.demo.repositories.CustomerRepository;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -9,6 +11,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.sql.Timestamp;
 import java.time.LocalDate;
+import java.util.List;
 import java.util.stream.Collectors;
 
 @RestController
@@ -23,12 +26,13 @@ public class CustomerController {
 
     @GetMapping
     @RequestMapping("{id}")
-    public ResponseEntity get(@PathVariable("id") int id){
+    public ResponseEntity<List<Timestamp>> get(@PathVariable("id") int id){
         Timestamp t = Timestamp.valueOf("2021-01-10 00:00:00");
+        System.out.println(t);
         return ResponseEntity.ok(repository.getById(id)
                 .getRentalsByCustomerId()
                 .stream()
-                .map(x->x.getLastUpdate())
-                .collect(Collectors.toList()));
+                .map(Rental::getLastUpdate)
+                .toList());
     }
 }
